added first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Github Repo</title>
+    <link rel="stylesheet" href="styles/first.css">
 </head>
 <body>
-    
+    <div>
+        <h3>my first blog</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi commodi itaque fugiat! Quis quos excepturi voluptatibus praesentium sit temporibus! Ad.</p>
+    </div>
 </body>
 </html>
